--- a/app/views/video_games/new.html.erb
+++ b/app/views/video_games/new.html.erb
@@ -2,4 +2,6 @@
 <p>Title: text_field</p>
 <p>Release Year: selection_field</p>
 <p>Console: selection_field</p>
+<p>Tags: collection_field</p>
+<p>New Tag: partial_to tags/new.html.erb</p>
 <p>Submit button | Cancel link</p>
