--- a/app/views/video_games/show.html.erb
+++ b/app/views/video_games/show.html.erb
@@ -1,11 +1,11 @@
 <h1>Video Game Title</h1>
 <p>Console</p>
 <p>Release Year</p>
-<p>Tags</p>
+<p>Tags | partial_to tags/show.html.erb</p>
 <p>Edit button | Delete button</p>
 <p></p>
 <h3>Write a Review!</h3>
 <div>partial_to reviews/new.html.erb</div>
 <p>or</p>
 <h3>Review</h3>
-<p>user's existing game review</p>
+<p>partial_to user's existing game review at reviews/show.html.erb</p>
