Sessions Controller. fixed logic in create method. added redirect to root in session#destroy. created sign out link in application.html.erb. removed some stub content from welecome/home.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div>navbar</div>
+    <div>navbar content <%= link_to "Sign out", session_path(session[:user_id]), method: :delete if session[:user_id] %></div>
     <%= flash[:alert] if flash[:alert] %>
     <%= yield %>
   </body>
