changed field name from 'password_confirm' to 'pasword_confirmation' to fit rails convention. added validations for email, password, password_confirmation to User model. updated notes.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,8 +14,8 @@
     <%= f.password_field :password %>
   </div>
   <div>
-    <%= f.label :password_confirm, "Confirm Password" %>
-    <%= f.password_field :password_confirm %>
+    <%= f.label :password_confirmation, "Confirm Password" %>
+    <%= f.password_field :password_confirmation %>
   </div>
   <div>
     <%= f.submit "Sign up" %>
