users/show: removed some stubbed data and replaced with user data. created Edit and Delete buttons. sessions/new: changing password field type from text to password.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Account Information</h1>
-<p>Nickname: Nickname</p>
-<p>Email: Email</p>
-<p>Edit button | Delete button</p>
+
+<h3><%= @user.nickname %></h3>
+<p>Email: <%= @user.email %></p>
+<%= button_to "Edit", @user %> <%= button_to "Delete", @user, method: :delete %>
+
 <p>Collection of Video Games:</p>
 <ul>
   <li>Link to Video Game | Link to Review (if present)</li>
