created users/edit.html.erb. adjusted edit button to hyperlink on users/show.html.erb. added and adjusted form content to users/edit.html.erb. included 'Cancel' links in new/edit forms for users. updated notes.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <h3><%= @user.nickname %></h3>
 <p>Email: <%= @user.email %></p>
-<%= button_to "Edit", @user %> <%= button_to "Delete", @user, method: :delete %>
+<%= link_to "Edit", edit_user_path(@user) %> <%= button_to "Delete", @user, method: :delete %>
 
 <p>Collection of Video Games:</p>
 <ul>
