--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,3 @@
-<h1>Registration</h1>
-<% if !@user.errors.empty? %>
-  <% @user.errors.full_messages.each do |message| %>
-    <ul>
-      <li><%= message %></li>
-    </ul>
-  <% end %>
-<% end %>
 <%= form_for @user do |f| %>
   <div>
     <%= f.label :email, "Email" %>
@@ -24,6 +16,6 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div>
-    <%= f.submit "Sign up" %> <%= link_to "Cancel", root_path %>
+    <%= f.submit "Update" %> <%= link_to "Cancel", @user %>
   </div>
 <% end %>
