added password_required? method to user model. applied password_required? condition to password validation calls. updated users#edit method to include redirect and render if valid. moved error headers to a partial called users/_error_messages. calling to partial in new and edit views for users. updated notes.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,5 @@
 <h1>Registration</h1>
-<% if !@user.errors.empty? %>
-  <% @user.errors.full_messages.each do |message| %>
-    <ul>
-      <li><%= message %></li>
-    </ul>
-  <% end %>
-<% end %>
+<%= render(partial: 'error_message', collection: @user.errors.full_messages) if !@user.errors.empty?%>
 <%= form_for @user do |f| %>
   <div>
     <%= f.label :email, "Email" %>
