--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
+<h1>Update Account Details</h1>
+<%= render(partial: 'error_message', collection: @user.errors.full_messages) if !@user.errors.empty?%>
 <%= form_for @user do |f| %>
   <div>
     <%= f.label :email, "Email" %>
@@ -6,14 +8,6 @@
   <div>
     <%= f.label :nickname, "Nickname" %>
     <%= f.text_field :nickname %>
-  </div>
-  <div>
-    <%= f.label :password, "Password" %>
-    <%= f.password_field :password %>
-  </div>
-  <div>
-    <%= f.label :password_confirmation, "Confirm Password" %>
-    <%= f.password_field :password_confirmation %>
   </div>
   <div>
     <%= f.submit "Update" %> <%= link_to "Cancel", @user %>
