added New video game link to video game index page. updated video_game#new action in controller. replaced most stub content on VideoGame new.html with ruby form generator code. replaced alinks on website to redirect :back on sessions/new, users/new, users/edit. updated language of stub content on users/show.html to refernece UserVideoGame object.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,6 +10,6 @@
     <%= f.text_field :nickname %>
   </div>
   <div>
-    <%= f.submit "Update" %> <%= link_to "Cancel", @user %>
+    <%= f.submit "Update" %> <%= link_to "Cancel", :back %>
   </div>
 <% end %>
