--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,6 +18,6 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div>
-    <%= f.submit "Sign up" %> <%= link_to "Cancel", root_path %>
+    <%= f.submit "Sign up" %> <%= link_to "Cancel", :back %>
   </div>
 <% end %>
