--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 <p>Email: <%= @user.email %></p>
 <%= link_to "Edit", edit_user_path(@user) %> <%= button_to("Delete", @user, method: :delete) if "HIDE UNTIL FUTURE RELEASE" == true %>
 
-<p>Collection of Video Games:</p>
+<p>Collection of UserVideoGames:</p>
 <ul>
   <li>Link to Video Game | Link to Review (if present)</li>
 </ul>
