--- a/app/views/video_games/new.html.erb
+++ b/app/views/video_games/new.html.erb
@@ -1,7 +1,22 @@
 <h1>New Video Game</h1>
-<p>Title: text_field</p>
-<p>Release Year: selection_field</p>
-<p>Console: selection_field</p>
+
+<%= form_for @video_game do |f| %>
+  <div>
+    <%= f.label :title %>
+    <%= f.text_field :title%>
+  </div>
+  <div>
+    <%= f.label :year_released, "Year Released" %>
+    <%= f.text_field :year_released%>
+  </div>
+  <div>
+    <%= f.label :console %>
+    <%= f.text_field :console%>
+  </div>
+
 <p>Tags: collection_field</p>
 <p>New Tag: partial_to tags/new.html.erb</p>
-<p>Submit button | Cancel link</p>
+  <div>
+    <%= f.submit :submit%> <%= link_to "Cancel", :back %>
+  </div>
+<% end %>
