in video_game, changed attribute 'year_released', to 'release_year' for stronger naming convention. changed references in vid_game/new.html.erb, seeds.db, migration file. reset db, reseeded. created video_game_params private method in controller, udpated create action content. updated notes.

--- a/app/views/video_games/new.html.erb
+++ b/app/views/video_games/new.html.erb
@@ -6,8 +6,8 @@
     <%= f.text_field :title%>
   </div>
   <div>
-    <%= f.label :year_released, "Year Released" %>
-    <%= f.text_field :year_released%>
+    <%= f.label :release_year, "Year Released" %>
+    <%= f.text_field :release_year%>
   </div>
   <div>
     <%= f.label :console %>
