VideoGame model: added uniqueness and presence validation. added _error_messages partial and render call to video game new view. moving _error_message partial to layouts since it is being used by multiple view directories (users and videogames so far).

--- a/app/views/layouts/_error_message.html.erb
+++ b/app/views/layouts/_error_message.html.erb
@@ -1,3 +1,5 @@
-<ul>
-  <li><%= error_message %></li>
-</ul>
+<% if !error_message.nil? %>
+  <ul>
+    <li><%= error_message%></li>
+  </ul>
+<% end %>
