--- a/app/views/video_games/new.html.erb
+++ b/app/views/video_games/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Video Game</h1>
-
+<%= render(partial: 'layouts/error_message', collection: @video_game.errors.full_messages) %>
 <%= form_for @video_game do |f| %>
   <div>
     <%= f.label :title %>
