--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Registration</h1>
-<%= render(partial: 'layouts/error_message', collection: @user.errors.full_messages) %>
+<%= render partial: 'layouts/error_message', collection: @user.errors.full_messages %>
 <%= form_for @user do |f| %>
   <div>
     <%= f.label :email, "Email" %>
