added Home link to navbar in application.html.erb. adjusted submit formatting for video_games new and edit forms.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,14 @@
 
   <body>
     <div>
-      <%= link_to "Sign up", new_user_path if !session[:user_id] %>
-      <%= link_to "Sign in", new_session_path if !session[:user_id] %>
-      <%= link_to "Sign out", session_path(session[:user_id]), method: :delete if session[:user_id] %>
+      <% if session[:user_id] %>
+        <%= link_to "Home", user_path(session[:user_id]) %>
+        <%= link_to "Video Games", video_games_path %>
+        <%= link_to "Sign out", session_path(session[:user_id]), method: :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_path if !session[:user_id] %>
+        <%= link_to "Sign in", new_session_path if !session[:user_id] %>
+      <% end %>
     </div>
     <%= flash[:alert] if flash[:alert] %>
     <%= yield %>
