--- a/app/views/video_games/_form.html.erb
+++ b/app/views/video_games/_form.html.erb
@@ -15,6 +15,6 @@
 <p>Tags: collection_field</p>
 <p>New Tag: partial_to tags/new.html.erb</p>
   <div>
-    <%= f.submit :submit %> <%= link_to "Cancel", :back %>
+    <%= f.submit "Submit" %> <%= link_to "Cancel", :back %>
   </div>
 <% end %>
