added 'Add to Collection' link on video_games index page.  converted unordered list to table to improve visual. added create and destroy methods to user_video_games controller. added content to create method. updated notes.

--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Video Games</h1>
   <p><%= link_to "Add New Video Game", new_video_game_path %></p>
-<ul>
+
+<table>
   <% @video_games.each do |video_game| %>
-    <li><%= link_to video_game.title, video_game %> | Button: Add to collection. Render Partial to new UserVideoGame form.</li>
+  <tr>
+    <td><%= link_to video_game.title, video_game %></td>
+    <td><%= link_to "Add to Collection", user_video_games_path(video_game_id: video_game), method: "post" %></td>
+  </tr>
   <% end %>
-</ul>
+</table>
