user_video_game controller: wrote code for #destroy. adjusted redirect from #create to video_games_path. application controller: added #current_user as helper method. refactored user show page html. added a link to add new game on users/show. added text that shows if video game collecti onis empty on users/show.

--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -1,11 +1,10 @@
 <h1>Video Games</h1>
   <p><%= link_to "Add New Video Game", new_video_game_path %></p>
-
 <table>
   <% @video_games.each do |video_game| %>
   <tr>
     <td><%= link_to video_game.title, video_game %></td>
-    <td><%= button_to "Add to Collection", user_video_games_path(video_game_id: video_game), method: "post" %></td>
+    <td><%= button_to "Add to Collection", user_video_games_path(video_game_id: video_game) unless current_user.video_games.include?(video_game)%></td>
   </tr>
   <% end %>
 </table>
