--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,16 @@
 <h1>Account Information</h1>
 
-<h3><%= @user.nickname %></h3>
+<p>Nickname: <%= @user.nickname %></p>
 <p>Email: <%= @user.email %></p>
 <%= link_to "Edit", edit_user_path(@user) %> <%= button_to("Delete", @user, method: :delete) if "HIDE UNTIL FUTURE RELEASE" == true %>
 
-<p>Your Video Game Collection</p>
+<h3>Your Video Games</h3>
+<%= "Your collection is empty..." if current_user.video_games.empty? %>
 
 <table>
+  <tr>
+    <td><%= link_to "Add a Game!", video_games_path %></td>
+  </tr>
   <% @user.video_games.each do |video_game| %>
   <tr>
     <td><%= link_to video_game.title, video_game %></td>
