--- a/app/views/video_games/show.html.erb
+++ b/app/views/video_games/show.html.erb
@@ -1,9 +1,15 @@
 <h1><%= @video_game.title %></h1>
 <p><%= @video_game.release_year %></p>
 <p><%= @video_game.console %></p>
-<p>Tags | partial_to tags/show.html.erb</p>
+<p><%= if @video_game.tags.empty? then "This game has no tags." else "Tags:" end %></p>
+
+<ul>
+  <% @video_game.tags.each do |tag| %>
+    <li>tag.name</li>
+  <% end %>
+</ul>
+
 <p><%= link_to "Edit", edit_video_game_path(@video_game) %> | Delete button</p>
-<p></p>
 <div>partial_to reviews/new.html.erb</div>
 <p>or</p>
 <p>partial_to user's existing game review at reviews/show.html.erb</p>
