updating video_game/_form.html.erb to include collection check boxes for tags. added @tags to video_game new and edit controller. added @tags as local passed in render call in new.html.erb and edit.html.erb for video games. added 'tag_ids:[] to permitted attributes in #video_game_params. corrected format error on video_games/show.html.erb.

--- a/app/views/video_games/_form.html.erb
+++ b/app/views/video_games/_form.html.erb
@@ -11,6 +11,10 @@
     <%= f.label :console %>
     <%= f.text_field :console%>
   </div>
+  <div>
+    <%= f.label :tags %>
+    <%= f.collection_check_boxes :tag_ids, tags, :id, :name %>
+  </div>
 
 <p>Tags: collection_field</p>
 <p>New Tag: partial_to tags/new.html.erb</p>
