video_games/_form.html.erb: added fields_for to create new tag form. video_game model: added accepts_nested_attributes_for tags. video_game _form: added fields_for to allow new tag feature. updated notes.

--- a/app/views/video_games/_form.html.erb
+++ b/app/views/video_games/_form.html.erb
@@ -15,8 +15,14 @@
     <%= f.label :tags %>
     <%= f.collection_check_boxes :tag_ids, tags, :id, :name %>
   </div>
+  <p>New Tag:</p>
+  <%= f.fields_for :tags, video_game.tags.build do |tags_fields| %>
+    <div>
+      <%= tags_fields.label :name %>
+      <%= tags_fields.text_field :name %>
+    </div>
+  <% end %>
 
-<p>Tags: collection_field</p>
 <p>New Tag: partial_to tags/new.html.erb</p>
   <div>
     <%= f.submit "Submit" %> <%= link_to "Cancel", :back %>
