--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <% if session[:user_id] %>
         <%= link_to "Home", user_path(session[:user_id]) %>
         <%= link_to "Video Games", video_games_path %>
+        <%= link_to "Tags", tags_path %>
         <%= link_to "Sign out", session_path(session[:user_id]), method: :delete %>
       <% else %>
         <%= link_to "Sign up", new_user_path if !session[:user_id] %>
