reviews controller, updated redirect to review show page. created reviews#set_review, defined as 'before action' symbol for #show. built html and ruby into reviews/show.html.erb. updated notes.

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,3 +1,5 @@
-<h1>Review Title</h1>
-<p>Review Content</p>
+<h1><%= @review.title %></h1>
+<h3>--<%= @review.video_game.title %>--</h3>
+<p><%= @review.rating %></p>
+<p><%= @review.content %></p>
 <p>Edit button | Delete button</p>
