--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @review.title %></h1>
 <h3>--<%= @review.video_game.title %>--</h3>
-<p><%= @review.rating %></p>
+<p>Rating: <%= @review.rating %>/5</p>
 <p><%= @review.content %></p>
-<p>Edit button | Delete button</p>
+<table>
+  <tr>
+    <td><%= link_to "Edit", edit_video_game_review_path(@review.video_game) %></td>
+    <td><%= button_to "Delete", video_game_review_path(@review.video_game), method: "delete" %></td>
+  </tr>
+</table>
