added more seed data. added class model method for video_games that returns most reviewed game. added content to welcome/home.html.erb allowing user to see most reviewed game with links to its individual reviews. updated notes.

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,11 @@
 <h1>Video Game Community Hub</h1>
-
-<p>Sample video game title</p>
-<p>Sample review</p>
+<h3>Most Reviewed Game: </h3>
+<p><%= VideoGame.most_reviewed.title %></p>
+<h3>Reviews:</h3>
+<table>
+  <% VideoGame.most_reviewed.reviews.each do |review| %>
+    <tr>
+      <td><%= link_to review.title, video_game_review_path(review.video_game_id, review) %></td>
+    </tr>
+  <% end %>
+</table
