added conditional to allow review/show.html.erb's edit and delete links. added config/initiazers/omniauth.rb with stock code. added .env file to root directory and gitignore.

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,9 +2,11 @@
 <h3>--<%= @review.video_game.title %>--</h3>
 <p>Rating: <%= @review.rating %>/5</p>
 <p><%= @review.content %></p>
+<% if current_user == @review.user_id %>
 <table>
   <tr>
     <td><%= link_to "Edit", edit_video_game_review_path(@review.video_game) %></td>
     <td><%= button_to "Delete", video_game_review_path(@review.video_game), method: "delete" %></td>
   </tr>
 </table>
+<% end %>
