application.html.erb: removed redundant logic showing navbar options if not logged in. added link to 'Sign in with Facebook'. created migration to add name,image,uid to users table. added route for omniauth login path.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
         <%= link_to "Sign out", session_path(session[:user_id]), method: :delete %>
       <% else %>
         <%= link_to "Home", root_path %>
-        <%= link_to "Sign up", new_user_path if !session[:user_id] %>
-        <%= link_to "Sign in", new_session_path if !session[:user_id] %>
+        <%= link_to "Sign up", new_user_path %>
+        <%= link_to "Sign in", new_session_path %>
+        <%= link_to "Facebook Sign in", '/auth/facebook' %>
       <% end %>
     </div>
     <%= flash[:alert] if flash[:alert] %>
