--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,26 +1,7 @@
 <h1>Tags</h1>
 <%= render partial: 'layouts/error_message', collection: @tag.errors.full_messages %>
-<p></p>
+<%= render partial: 'form', locals: {tag: @tag} %>
 
-  <div>
-
-
-  </div>
-  <div>
-
-  </div>
-
-
-<table>
-  <tr>
-    <%= form_for @tag do |f| %>
-      <td><%= f.label :name %></td>
-      <td><%= f.text_field :name %></td>
-      <td><%= f.submit %></td>
-    <% end %>
-  </tr>
-</table>
-<br></br>
 <table>
   <% @tags.each do |tag| %>
     <tr>
