call #login(user) method in users controller. moved #login(user) method from sessions controller to application controller. users/show.html.erb: removed stubbed content. refactored code on page. created users/_video_game.html.erb to house the collection of user's videogames, called on users/show.html.erb. updated syntax on reviews/index.html.erb. created helper method for users 'user_video_game_review(video_game).

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,7 @@
 <table>
   <% @reviews.each do |review| %>
     <tr>
-      <td><%= link_to review.title, video_game_review_path(review.video_game_id, review) %></td>
+      <td><%= link_to review.title, video_game_review_path(@video_game, review) %></td>
     </tr>
   <% end %>
 </table>
