--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,3 @@
 <h1>Registration</h1>
 <%= render partial: 'layouts/error_message', collection: @user.errors.full_messages %>
-<%= form_for @user do |f| %>
-  <div>
-    <%= f.label :email, "Email" %>
-    <%= f.text_field :email %>
-  </div>
-  <div>
-    <%= f.label :nickname, "Nickname" %>
-    <%= f.text_field :nickname %>
-  </div>
-  <div>
-    <%= f.label :password, "Password" %>
-    <%= f.password_field :password %>
-  </div>
-  <div>
-    <%= f.label :password_confirmation, "Confirm Password" %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div>
-    <%= f.submit "Sign up" %> <%= link_to "Cancel", :back %>
-  </div>
-<% end %>
+<%= render partial: 'form', locals: {user: @user} %>
