adding bootstrap-sass gem. added code to app/assets/stylesheets/application.css. renamed file above to application.scss. added meta tag to application.html.erb for mobile scaling. added container class to body. moved table definition from _video_game to users/show. added table class to video game collection table in users/show.html.erb. moved all table tags from partials to calling view. added 'table' class to all table tags. tags/index and tags/_form: adjusted new tag form to fit into index table. updated structure of tag display on video_game/show.html.erb. removed stub content for Delete Video Game from show page. feature never developed.

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Reviews for <%= @video_game.title if @video_game %></h1>
-<table>
+<table class="table">
   <% @reviews.each do |review| %>
     <tr>
       <td><%= link_to review.title, video_game_review_path(@video_game, review) %></td>
