--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,12 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-    <div>
+    <div class="container">
       <% if session[:user_id] %>
         <%= link_to "Home", user_path(session[:user_id]) %>
         <%= link_to "Video Games", video_games_path %>
@@ -21,8 +23,9 @@
         <%= link_to "Sign in", new_session_path %>
         <%= link_to "Facebook Sign in", '/auth/facebook' %>
       <% end %>
+
+      <%= flash[:alert] if flash[:alert] %>
+      <%= yield %>
     </div>
-    <%= flash[:alert] if flash[:alert] %>
-    <%= yield %>
   </body>
 </html>
