--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,11 +1,7 @@
 <h1>Video Game Community Hub</h1>
 <h3>Most Reviewed Game: </h3>
-<p><%= VideoGame.most_reviewed.title %></p>
+<p><%= @most_reviewed_game.title %></p>
 <h3>Reviews:</h3>
-<table>
-  <% VideoGame.most_reviewed.reviews.each do |review| %>
-    <tr>
-      <td><%= link_to review.title, video_game_review_path(review.video_game_id, review) %></td>
-    </tr>
-  <% end %>
-</table
+<table class="table">
+  <%= render partial: 'review', collection: @most_reviewed_game.reviews %>
+</table>
