updated formatting of checkbox fields in video_game form. added 'form-group' class to all form fields accross site.

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,22 +1,22 @@
 <h1><h3>Review for <%= video_game.title %></h3></h1>
 <%= render partial: 'layouts/error_message', collection: review.errors.full_messages %>
-<%= form_for [video_game, review] do |f| %>
-  <div>
+<%= form_for [video_game, review], html: {class: "form form_container"} do |f| %>
+  <div class="form-group">
     <%= f.hidden_field :video_game_id %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :rating %>
     <%= f.select(:rating, [1,2,3,4,5], {include_blank: "- Select -"}) %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.label :content %>
     <%= f.text_area :content, cols: 80, rows: 20 %>
   </div>
-  <div>
+  <div class="form-group">
     <%= f.submit "Submit" %> <%= link_to "Cancel", :back %>
   </div>
 <% end %>
