video_games/show/html.erb , tags/index.html.erb: created hyperlinks to tag show.html.erb. tags/show.html.erb: added content to show tag.name, and table with associated video games. video_games controller: added @tag to #create and #update to prevent error upon 'render :new' call. updated spec.md

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -6,7 +6,7 @@
   <%= render partial: 'form', locals: {tag: @tag} %>
   <% @tags.each do |tag| %>
     <tr>
-      <td><%= tag.name %></td>
+      <td><%= link_to tag.name, tag %></td>
       <td><%= button_to "Delete", tag_path(tag), method: "delete" %></td>
     </tr>
   <% end %>
