--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
   <body>
     <div class="container">
       <% if session[:user_id] %>
-        <%= link_to "Home", user_path(session[:user_id]) %>
-        <%= link_to "Video Games", video_games_path %>
-        <%= link_to "Tags", tags_path %>
+        <%= link_to "Home", user_path(session[:user_id]) %> |
+        <%= link_to "Video Games", video_games_path %> |
+        <%= link_to "Tags", tags_path %> |
         <%= link_to "Sign out", session_path(session[:user_id]), method: :delete %>
       <% else %>
-        <%= link_to "Home", root_path %>
-        <%= link_to "Sign up", new_user_path %>
-        <%= link_to "Sign in", new_session_path %>
+        <%= link_to "Home", root_path %> |
+        <%= link_to "Sign up", new_user_path %> |
+        <%= link_to "Sign in", new_session_path %> |
         <%= link_to "Facebook Sign in", '/auth/facebook' %>
       <% end %>
 
