adjusted video game show page to only allow user to write a new review if they have not already written one.

--- a/app/views/video_games/show.html.erb
+++ b/app/views/video_games/show.html.erb
@@ -7,7 +7,9 @@
 </p>
 <p><%= link_to "Edit", edit_video_game_path(@video_game) %></p>
 <p>
+  <% if !user_video_game_review(@video_game) %>
   <%= link_to "Write a Review!", new_video_game_review_path(@video_game) %>
    or
-  <%= link_to "View all", video_game_reviews_path(@video_game) %>
+   <% end %>
+  <%= link_to "View all Reviews", video_game_reviews_path(@video_game) %>
 </p>
