--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
 
   <body>
@@ -24,6 +25,7 @@
       <% end %>
 
       <%= flash[:alert] if flash[:alert] %>
+      <%= hidden_field_tag "userId", session[:user_id] if session[:user_id]%> 
       <%= yield %>
     </div>
   </body>
