--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -5,11 +5,11 @@
   </tobdy>
 </table>
 
-<table class="table">
+<!-- <table class="table">
   <% @video_games.each do |video_game| %>
   <tr>
     <td><%= link_to video_game.title, video_game %></td>
     <td><%= button_to "Add to Collection", user_video_games_path(video_game_id: video_game) unless current_user.video_games.include?(video_game) %></td>
   </tr>
   <% end %>
-</table>
+</table> -->
