updated spec.md. corrected 'tobdy' to 'tbody' in video_games index.html.erb. added ids to videogame show.html.erb to house js content. vido_games.js: added addVideoGame() function with comment. added addVideoGame() call to document ready function.

--- a/app/views/video_games/index.html.erb
+++ b/app/views/video_games/index.html.erb
@@ -2,7 +2,7 @@
   <p><%= link_to "Add New Video Game", new_video_game_path %></p>
 <table class="table">
   <tbody id="vg_tbody">
-  </tobdy>
+  </tbody>
 </table>
 
 <!-- <table class="table">
