video_games show.html.erb: added <p id=vg_tags>. removed call to partial that loaded tags on video game page. video_games.js: added code that appends tags to #vg_tags html element. updated spec-js.md

--- a/app/views/video_games/show.html.erb
+++ b/app/views/video_games/show.html.erb
@@ -1,9 +1,9 @@
 <h1 id="vg_title"></h1>
 <p id="vg_release_year"></p>
 <p id="vg_console"></p>
-<p>
+<p id="vg_tags">
   <%= if @video_game.tags.empty? then "This game has no tags." else "Tags:" end %>
-  <%= render partial: 'tag', collection: @video_game.tags, locals: {video_game: @video_game} %>
+
 </p>
 <p><%= link_to "Edit", edit_video_game_path(@video_game) %></p>
 <p>
