tag index.html.erb: added tbody tag_tbody to index table to receive newly appended JS data. tags.js: added addTag() with code to post new tag and render the newly submitted data.

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -3,11 +3,13 @@
 
 
 <table class="table">
-  <%= render partial: 'form', locals: {tag: @tag} %>
-  <% @tags.each do |tag| %>
-    <tr>
-      <td><%= link_to tag.name, tag %></td>
-      <td><%= button_to "Delete", tag_path(tag), method: "delete" %></td>
-    </tr>
-  <% end %>
+  <tbody id="tag_tbody">
+    <%= render partial: 'form', locals: {tag: @tag} %>
+    <% @tags.each do |tag| %>
+      <tr>
+        <td><%= link_to tag.name, tag %></td>
+        <td><%= button_to "Delete", tag_path(tag), method: "delete" %></td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
